--- a/configs/sim/gmoccapy/tool_sensor.glade
+++ b/configs/sim/gmoccapy/tool_sensor.glade
@@ -1,29 +1,35 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-requires gladevcp 0.0 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkFrame" id="frm_tool_sensor">
         <property name="visible">True</property>
-        <property name="label_xalign">0.5</property>
+        <property name="can-focus">False</property>
+        <property name="label-xalign">0.5</property>
         <child>
           <object class="GtkAlignment" id="ali_tool_sensor">
             <property name="visible">True</property>
-            <property name="top_padding">5</property>
-            <property name="bottom_padding">5</property>
-            <property name="left_padding">5</property>
-            <property name="right_padding">5</property>
+            <property name="can-focus">False</property>
+            <property name="top-padding">5</property>
+            <property name="bottom-padding">5</property>
+            <property name="left-padding">5</property>
+            <property name="right-padding">5</property>
             <child>
               <object class="GtkVBox" id="vbox_tool_sensor">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkHBox" id="hbox_tool_sensor">
                     <property name="visible">True</property>
+                    <property name="can-focus">False</property>
                     <child>
                       <object class="GtkLabel" id="lbl_tool_sensor">
                         <property name="visible">True</property>
+                        <property name="can-focus">False</property>
                         <property name="label" translatable="yes">Probe:</property>
                       </object>
                       <packing>
@@ -35,10 +41,14 @@
                     <child>
                       <object class="HAL_LED" id="led_tool_sensor">
                         <property name="visible">True</property>
-                        <property name="pick_color_on">#0000ffff0000</property>
-                        <property name="pick_color_off">#ffff00000000</property>
+                        <property name="can-focus">False</property>
+                        <property name="led-blink-rate">0</property>
+                        <property name="pick-color-off">#ffff00000000</property>
+                        <property name="pick-color-on">#0000ffff0000</property>
                       </object>
                       <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
                         <property name="position">1</property>
                       </packing>
                     </child>
@@ -52,11 +62,11 @@
                 <child>
                   <object class="HAL_Button" id="btn_tool_sensor_sim">
                     <property name="label" translatable="yes">Sim Signal</property>
-                    <property name="width_request">112</property>
-                    <property name="height_request">56</property>
+                    <property name="width-request">112</property>
+                    <property name="height-request">56</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -71,8 +81,9 @@
         <child type="label">
           <object class="GtkLabel" id="lbl_frm_tool_sensor">
             <property name="visible">True</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes">&lt;b&gt;Tool Probe&lt;/b&gt;</property>
-            <property name="use_markup">True</property>
+            <property name="use-markup">True</property>
           </object>
         </child>
       </object>
