--- a/configs/sim/gmoccapy/vcp_box.glade
+++ b/configs/sim/gmoccapy/vcp_box.glade
@@ -1,37 +1,44 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <!-- interface-requires gladevcp 0.0 -->
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkTable" id="table1">
         <property name="visible">True</property>
-        <property name="n_rows">2</property>
+        <property name="can-focus">False</property>
+        <property name="n-rows">2</property>
         <child>
           <object class="HAL_Meter" id="hal_meter1">
-            <property name="width_request">200</property>
-            <property name="height_request">200</property>
+            <property name="width-request">200</property>
+            <property name="height-request">200</property>
             <property name="visible">True</property>
-            <property name="z2_color">#ffff00000000</property>
+            <property name="can-focus">False</property>
+            <property name="bg-color">#ffffffffffff</property>
             <property name="label">RPM</property>
             <property name="majorscale">500</property>
-            <property name="z0_border">250</property>
-            <property name="z0_color">#ffffffff0000</property>
             <property name="max">6000</property>
-            <property name="z1_color">#0000ffff0000</property>
             <property name="minorscale">100</property>
-            <property name="bg_color">#ffffffffffff</property>
+            <property name="z0-border">250</property>
+            <property name="z0-color">#ffffffff0000</property>
+            <property name="z1-color">#0000ffff0000</property>
+            <property name="z2-color">#ffff00000000</property>
           </object>
         </child>
         <child>
           <object class="GtkHBox" id="hbox1">
             <property name="visible">True</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="HAL_LED" id="hal_led1">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="led-blink-rate">0</property>
               </object>
               <packing>
+                <property name="expand">True</property>
                 <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
@@ -39,9 +46,12 @@
             <child>
               <object class="HAL_LED" id="hal_led3">
                 <property name="visible">True</property>
-                <property name="pick_color_off">#f6e0ebe201e9</property>
+                <property name="can-focus">False</property>
+                <property name="led-blink-rate">0</property>
+                <property name="pick-color-off">#f6e0ebe201e9</property>
               </object>
               <packing>
+                <property name="expand">True</property>
                 <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
@@ -49,16 +59,19 @@
             <child>
               <object class="HAL_LED" id="hal_led2">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="led-blink-rate">0</property>
               </object>
               <packing>
+                <property name="expand">True</property>
                 <property name="fill">False</property>
                 <property name="position">2</property>
               </packing>
             </child>
           </object>
           <packing>
-            <property name="top_attach">1</property>
-            <property name="bottom_attach">2</property>
+            <property name="top-attach">1</property>
+            <property name="bottom-attach">2</property>
           </packing>
         </child>
       </object>
