--- a/configs/apps/gladevcp/by-widget/combobox.ui
+++ b/configs/apps/gladevcp/by-widget/combobox.ui
@@ -1,36 +1,8 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-requires gladevcp 0.0 -->
-  <!-- interface-naming-policy project-wide -->
-  <object class="GtkWindow" id="window1">
-    <property name="width_request">150</property>
-    <property name="height_request">50</property>
-    <signal name="destroy" handler="on_destroy"/>
-    <child>
-      <object class="GtkVBox" id="vbox1">
-        <property name="visible">True</property>
-        <child>
-          <object class="HAL_ComboBox" id="hal_combobox1">
-            <property name="visible">True</property>
-            <property name="model">liststore1</property>
-            <property name="active">2</property>
-            <property name="column">0</property>
-            <signal name="changed" handler="on_changed"/>
-            <child>
-              <object class="GtkCellRendererText" id="cellrenderertext1"/>
-              <attributes>
-                <attribute name="text">1</attribute>
-              </attributes>
-            </child>
-          </object>
-          <packing>
-            <property name="position">0</property>
-          </packing>
-        </child>
-      </object>
-    </child>
-  </object>
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkListStore" id="liststore1">
     <columns>
       <!-- column-name myfloat -->
@@ -52,5 +24,38 @@
         <col id="1" translatable="yes">The Answer</col>
       </row>
     </data>
+  </object>
+  <object class="GtkWindow" id="window1">
+    <property name="width-request">150</property>
+    <property name="height-request">50</property>
+    <property name="can-focus">False</property>
+    <signal name="destroy" handler="on_destroy" swapped="no"/>
+    <child>
+      <object class="GtkVBox" id="vbox1">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <child>
+          <object class="HAL_ComboBox" id="hal_combobox1">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="model">liststore1</property>
+            <property name="active">2</property>
+            <property name="column">0</property>
+            <signal name="changed" handler="on_changed" swapped="no"/>
+            <child>
+              <object class="GtkCellRendererText" id="cellrenderertext1"/>
+              <attributes>
+                <attribute name="text">1</attribute>
+              </attributes>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
   </object>
 </interface>
