--- a/configs/apps/gladevcp/by-widget/combobox_manual_list.ui
+++ b/configs/apps/gladevcp/by-widget/combobox_manual_list.ui
@@ -1,20 +1,25 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <!-- interface-requires gladevcp 0.0 -->
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
-    <property name="default_width">70</property>
-    <property name="default_height">30</property>
+    <property name="can-focus">False</property>
+    <property name="default-width">70</property>
+    <property name="default-height">30</property>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
+        <property name="can-focus">False</property>
         <child>
           <object class="HAL_ComboBox" id="hal_combobox1">
             <property name="visible">True</property>
-            <signal name="changed" handler="on_changed"/>
+            <property name="can-focus">False</property>
+            <signal name="changed" handler="on_changed" swapped="no"/>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
