--- a/configs/apps/gladevcp/mdi-command-example/speed.ui
+++ b/configs/apps/gladevcp/mdi-command-example/speed.ui
@@ -1,21 +1,33 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-requires gladevcp 0.0 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="upper">100</property>
+    <property name="value">42</property>
+    <property name="step-increment">0.10</property>
+  </object>
+  <object class="EMC_Action_MDI" id="hal_action_mdi1">
+    <property name="command">(MSG, "The speed is:  ${speed-f}")</property>
+  </object>
   <object class="GtkWindow" id="window1">
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
+        <property name="can-focus">False</property>
         <child>
           <object class="HAL_SpinButton" id="speed">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="invisible_char">&#x25CF;</property>
+            <property name="can-focus">True</property>
+            <property name="invisible-char">●</property>
             <property name="adjustment">adjustment1</property>
             <property name="digits">1</property>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
@@ -24,12 +36,14 @@
             <property name="label" translatable="yes">  Pass speed as
 parameter in MDI
     command</property>
+            <property name="related-action">hal_action_mdi1</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="related_action">hal_action_mdi1</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -38,13 +52,5 @@ parameter in MDI
         </child>
       </object>
     </child>
-  </object>
-  <object class="GtkAdjustment" id="adjustment1">
-    <property name="value">42</property>
-    <property name="upper">100</property>
-    <property name="step_increment">0.10000000000000001</property>
-  </object>
-  <object class="EMC_Action_MDI" id="hal_action_mdi1">
-    <property name="command">(MSG, "The speed is:  ${speed-f}")</property>
   </object>
 </interface>
