--- a/configs/apps/gladevcp/mdi-command-example/whoareyou.ui
+++ b/configs/apps/gladevcp/mdi-command-example/whoareyou.ui
@@ -1,20 +1,21 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-requires gladevcp 0.0 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
+  <object class="EMC_Action_MDI" id="hal_action_mdi1">
+    <property name="command">(MSG, "Hi, I'm an EMC_Action_MDI")</property>
+  </object>
   <object class="GtkWindow" id="window1">
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkButton" id="button1">
         <property name="label" translatable="yes">Who are you?</property>
+        <property name="related-action">hal_action_mdi1</property>
         <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="receives_default">True</property>
-        <property name="related_action">hal_action_mdi1</property>
+        <property name="can-focus">True</property>
+        <property name="receives-default">True</property>
       </object>
     </child>
-  </object>
-  <object class="EMC_Action_MDI" id="hal_action_mdi1">
-    <property name="command">(MSG, "Hi, I'm an EMC_Action_MDI")</property>
   </object>
 </interface>
