--- a/configs/sim/axis/gladevcp/meter_scale.ui
+++ b/configs/sim/axis/gladevcp/meter_scale.ui
@@ -1,23 +1,42 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <!-- interface-requires gladevcp 0.0 -->
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
-    <property name="default_width">200</property>
-    <property name="default_height">150</property>
+    <property name="can-focus">False</property>
+    <property name="default-width">200</property>
+    <property name="default-height">150</property>
     <child>
+      <!-- n-columns=3 n-rows=2 -->
       <object class="HAL_Table" id="hal_table1">
         <property name="visible">True</property>
-        <property name="n_rows">2</property>
+        <property name="can-focus">False</property>
         <child>
           <object class="HAL_Meter" id="meter">
             <property name="visible">True</property>
-            <property name="z1_color">#ffffffff0000</property>
-            <property name="z2_color">#ffff00000000</property>
-            <property name="bg_color">#ffffffffffff</property>
-            <property name="z0_color">#0000ffff0000</property>
+            <property name="can-focus">False</property>
+            <property name="bg-color">#ffffffffffff</property>
+            <property name="z0-color">#0000ffff0000</property>
+            <property name="z1-color">#ffffffff0000</property>
+            <property name="z2-color">#ffff00000000</property>
           </object>
+          <packing>
+            <property name="left-attach">0</property>
+            <property name="top-attach">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
         </child>
         <child>
           <placeholder/>
