--- a/configs/sim/axis/moveoff/moveoff_gladevcp_8.ui
+++ b/configs/sim/axis/moveoff/moveoff_gladevcp_8.ui
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <requires lib="gtk+" version="2.24"/>
-  <!-- interface-requires gladevcp 0.0 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="lower">-1</property>
     <property name="upper">1</property>
-    <property name="step_increment">0.01</property>
-    <property name="page_increment">0.01</property>
+    <property name="step-increment">0.01</property>
+    <property name="page-increment">0.01</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
     <property name="lower">-1</property>
     <property name="upper">1</property>
-    <property name="step_increment">0.01</property>
-    <property name="page_increment">0.01</property>
+    <property name="step-increment">0.01</property>
+    <property name="page-increment">0.01</property>
   </object>
   <object class="GtkAdjustment" id="adjustment3">
     <property name="lower">-1</property>
     <property name="upper">1</property>
-    <property name="step_increment">0.01</property>
-    <property name="page_increment">0.01</property>
+    <property name="step-increment">0.01</property>
+    <property name="page-increment">0.01</property>
   </object>
   <object class="GtkWindow" id="window1">
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <child>
           <object class="HAL_CheckButton" id="enable-offset">
             <property name="label" translatable="yes">Enable Offsets
 (while paused)</property>
+            <property name="use-action-appearance">False</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="use_action_appearance">False</property>
-            <property name="draw_indicator">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">False</property>
+            <property name="draw-indicator">True</property>
           </object>
           <packing>
             <property name="expand">True</property>
@@ -46,16 +46,16 @@
         <child>
           <object class="GtkVBox" id="vbox2">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="GtkHBox" id="hbox1">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="HAL_LED" id="led-apply">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="led_blink_rate">0</property>
+                    <property name="can-focus">False</property>
+                    <property name="led-blink-rate">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -66,7 +66,7 @@
                 <child>
                   <object class="GtkLabel" id="label4">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Paused</property>
                   </object>
                   <packing>
@@ -85,12 +85,12 @@
             <child>
               <object class="GtkHBox" id="hbox2">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="HAL_LED" id="led-active">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="led_blink_rate">0</property>
+                    <property name="can-focus">False</property>
+                    <property name="led-blink-rate">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -101,7 +101,7 @@
                 <child>
                   <object class="GtkLabel" id="label5">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Active</property>
                   </object>
                   <packing>
@@ -127,11 +127,11 @@
         <child>
           <object class="GtkVBox" id="vbox3">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Requested X Offset</property>
               </object>
               <packing>
@@ -143,9 +143,9 @@
             <child>
               <object class="HAL_HScale" id="x-offset-f">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can-focus">True</property>
                 <property name="adjustment">adjustment1</property>
-                <property name="round_digits">1</property>
+                <property name="round-digits">1</property>
                 <property name="digits">3</property>
               </object>
               <packing>
@@ -157,11 +157,11 @@
             <child>
               <object class="GtkHBox" id="hbox3">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkLabel" id="label6">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Current X:</property>
                   </object>
                   <packing>
@@ -173,9 +173,9 @@
                 <child>
                   <object class="HAL_Label" id="x-offset-current">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">label</property>
-                    <property name="label_pin_type">1</property>
+                    <property name="label-pin-type">1</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -200,11 +200,11 @@
         <child>
           <object class="GtkVBox" id="vbox4">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Requested Y Offset</property>
               </object>
               <packing>
@@ -216,9 +216,9 @@
             <child>
               <object class="HAL_HScale" id="y-offset-f">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can-focus">True</property>
                 <property name="adjustment">adjustment2</property>
-                <property name="round_digits">1</property>
+                <property name="round-digits">1</property>
                 <property name="digits">3</property>
               </object>
               <packing>
@@ -230,11 +230,11 @@
             <child>
               <object class="GtkHBox" id="hbox4">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkLabel" id="label7">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Current Y:</property>
                   </object>
                   <packing>
@@ -246,9 +246,9 @@
                 <child>
                   <object class="HAL_Label" id="y-offset-current">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">label</property>
-                    <property name="label_pin_type">1</property>
+                    <property name="label-pin-type">1</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -273,11 +273,11 @@
         <child>
           <object class="GtkVBox" id="vbox6">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Requested Z Offset</property>
               </object>
               <packing>
@@ -289,9 +289,9 @@
             <child>
               <object class="HAL_HScale" id="z-offset-f">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can-focus">True</property>
                 <property name="adjustment">adjustment3</property>
-                <property name="round_digits">1</property>
+                <property name="round-digits">1</property>
                 <property name="digits">3</property>
               </object>
               <packing>
@@ -303,11 +303,11 @@
             <child>
               <object class="GtkHBox" id="hbox5">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkLabel" id="label8">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Current Z:</property>
                   </object>
                   <packing>
@@ -319,9 +319,9 @@
                 <child>
                   <object class="HAL_Label" id="z-offset-current">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">label</property>
-                    <property name="label_pin_type">1</property>
+                    <property name="label-pin-type">1</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -346,15 +346,15 @@
         <child>
           <object class="GtkVBox" id="vbox7">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="HAL_CheckButton" id="enable-backtrack">
                 <property name="label" translatable="yes">Enable Backtrack</property>
+                <property name="use-action-appearance">False</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_action_appearance">False</property>
-                <property name="draw_indicator">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">False</property>
+                <property name="draw-indicator">True</property>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -365,11 +365,11 @@
             <child>
               <object class="GtkHBox" id="hbox6">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkLabel" id="label9">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Waypoint %:</property>
                   </object>
                   <packing>
@@ -381,7 +381,7 @@
                 <child>
                   <object class="HAL_Label" id="waypoint-percent-used">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">label</property>
                   </object>
                   <packing>
@@ -400,12 +400,12 @@
             <child>
               <object class="GtkHBox" id="hbox7">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="HAL_LED" id="led-waypoint-limit">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="led_blink_rate">0</property>
+                    <property name="can-focus">False</property>
+                    <property name="led-blink-rate">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -416,7 +416,7 @@
                 <child>
                   <object class="GtkLabel" id="label10">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <property name="label" translatable="yes">Waypt limit</property>
                   </object>
                   <packing>
