--- a/configs/sim/axis/remap/extend-builtins/show.ui
+++ b/configs/sim/axis/remap/extend-builtins/show.ui
@@ -1,77 +1,89 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <!-- interface-requires gladevcp 0.0 -->
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
-    <property name="width_request">400</property>
-    <property name="default_width">300</property>
+    <property name="width-request">400</property>
+    <property name="can-focus">False</property>
+    <property name="default-width">300</property>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
+        <property name="can-focus">False</property>
         <property name="spacing">4</property>
         <child>
           <object class="GtkTable" id="table1">
             <property name="visible">True</property>
-            <property name="n_rows">3</property>
-            <property name="n_columns">2</property>
-            <property name="column_spacing">4</property>
-            <property name="row_spacing">4</property>
+            <property name="can-focus">False</property>
+            <property name="n-rows">3</property>
+            <property name="n-columns">2</property>
+            <property name="column-spacing">4</property>
+            <property name="row-spacing">4</property>
             <child>
               <object class="HAL_LED" id="flood">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="led-blink-rate">0</property>
               </object>
               <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-                <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
+                <property name="left-attach">1</property>
+                <property name="right-attach">2</property>
+                <property name="top-attach">1</property>
+                <property name="bottom-attach">2</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Mist</property>
               </object>
             </child>
             <child>
               <object class="HAL_LED" id="spindle-on">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="led-blink-rate">0</property>
               </object>
               <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
-                <property name="top_attach">2</property>
-                <property name="bottom_attach">3</property>
+                <property name="left-attach">1</property>
+                <property name="right-attach">2</property>
+                <property name="top-attach">2</property>
+                <property name="bottom-attach">3</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Flood</property>
               </object>
               <packing>
-                <property name="top_attach">1</property>
-                <property name="bottom_attach">2</property>
+                <property name="top-attach">1</property>
+                <property name="bottom-attach">2</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Spindle</property>
               </object>
               <packing>
-                <property name="top_attach">2</property>
-                <property name="bottom_attach">3</property>
+                <property name="top-attach">2</property>
+                <property name="bottom-attach">3</property>
               </packing>
             </child>
             <child>
               <object class="HAL_LED" id="mist">
                 <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <property name="led-blink-rate">0</property>
               </object>
               <packing>
-                <property name="left_attach">1</property>
-                <property name="right_attach">2</property>
+                <property name="left-attach">1</property>
+                <property name="right-attach">2</property>
               </packing>
             </child>
           </object>
@@ -83,14 +95,15 @@
         </child>
         <child>
           <object class="HAL_HBar" id="spindle-speed">
-            <property name="width_request">300</property>
-            <property name="height_request">100</property>
+            <property name="width-request">300</property>
+            <property name="height-request">100</property>
             <property name="visible">True</property>
-            <property name="z0_color">#0000ffff0000</property>
-            <property name="z1_color">#ffffffff0000</property>
+            <property name="can-focus">False</property>
+            <property name="bg-color">#bebebebebebe</property>
             <property name="max">2000</property>
-            <property name="bg_color">#bebebebebebe</property>
-            <property name="z2_color">#ffff00000000</property>
+            <property name="z0-color">#0000ffff0000</property>
+            <property name="z1-color">#ffffffff0000</property>
+            <property name="z2-color">#ffff00000000</property>
           </object>
           <packing>
             <property name="expand">False</property>
