--- a/configs/sim/gmoccapy/button.glade
+++ b/configs/sim/gmoccapy/button.glade
@@ -1,112 +1,114 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <!-- interface-requires gladevcp 0.0 -->
-  <requires lib="gtk+" version="2.16"/>
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
+    <property name="can-focus">False</property>
     <child>
       <object class="GtkTable" id="tbl_marius">
         <property name="visible">True</property>
-        <property name="n_rows">2</property>
-        <property name="n_columns">3</property>
-        <property name="column_spacing">5</property>
-        <property name="row_spacing">5</property>
+        <property name="can-focus">False</property>
+        <property name="n-rows">2</property>
+        <property name="n-columns">3</property>
+        <property name="column-spacing">5</property>
+        <property name="row-spacing">5</property>
         <child>
           <object class="HAL_Button" id="hal_button1">
             <property name="label" translatable="yes">B1</property>
-            <property name="width_request">56</property>
-            <property name="height_request">56</property>
+            <property name="width-request">56</property>
+            <property name="height-request">56</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="x_options">GTK_SHRINK</property>
-            <property name="y_options">GTK_SHRINK</property>
+            <property name="x-options">GTK_SHRINK</property>
+            <property name="y-options">GTK_SHRINK</property>
           </packing>
         </child>
         <child>
           <object class="HAL_Button" id="hal_button2">
             <property name="label" translatable="yes">B4</property>
-            <property name="width_request">56</property>
-            <property name="height_request">56</property>
+            <property name="width-request">56</property>
+            <property name="height-request">56</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="top_attach">1</property>
-            <property name="bottom_attach">2</property>
-            <property name="x_options">GTK_SHRINK</property>
-            <property name="y_options">GTK_SHRINK</property>
+            <property name="top-attach">1</property>
+            <property name="bottom-attach">2</property>
+            <property name="x-options">GTK_SHRINK</property>
+            <property name="y-options">GTK_SHRINK</property>
           </packing>
         </child>
         <child>
           <object class="HAL_Button" id="hal_button3">
             <property name="label" translatable="yes">B2</property>
-            <property name="width_request">56</property>
-            <property name="height_request">56</property>
+            <property name="width-request">56</property>
+            <property name="height-request">56</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="right_attach">2</property>
-            <property name="x_options">GTK_SHRINK</property>
-            <property name="y_options">GTK_SHRINK</property>
+            <property name="left-attach">1</property>
+            <property name="right-attach">2</property>
+            <property name="x-options">GTK_SHRINK</property>
+            <property name="y-options">GTK_SHRINK</property>
           </packing>
         </child>
         <child>
           <object class="HAL_Button" id="hal_button4">
             <property name="label" translatable="yes">B5</property>
-            <property name="width_request">56</property>
-            <property name="height_request">56</property>
+            <property name="width-request">56</property>
+            <property name="height-request">56</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="right_attach">2</property>
-            <property name="top_attach">1</property>
-            <property name="bottom_attach">2</property>
-            <property name="x_options">GTK_SHRINK</property>
-            <property name="y_options">GTK_SHRINK</property>
+            <property name="left-attach">1</property>
+            <property name="right-attach">2</property>
+            <property name="top-attach">1</property>
+            <property name="bottom-attach">2</property>
+            <property name="x-options">GTK_SHRINK</property>
+            <property name="y-options">GTK_SHRINK</property>
           </packing>
         </child>
         <child>
           <object class="HAL_Button" id="hal_button5">
             <property name="label" translatable="yes">B3</property>
-            <property name="width_request">56</property>
-            <property name="height_request">56</property>
+            <property name="width-request">56</property>
+            <property name="height-request">56</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="left_attach">2</property>
-            <property name="right_attach">3</property>
-            <property name="x_options">GTK_SHRINK</property>
-            <property name="y_options">GTK_SHRINK</property>
+            <property name="left-attach">2</property>
+            <property name="right-attach">3</property>
+            <property name="x-options">GTK_SHRINK</property>
+            <property name="y-options">GTK_SHRINK</property>
           </packing>
         </child>
         <child>
           <object class="HAL_Button" id="hal_button6">
             <property name="label" translatable="yes">B6	</property>
-            <property name="width_request">56</property>
-            <property name="height_request">56</property>
+            <property name="width-request">56</property>
+            <property name="height-request">56</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="left_attach">2</property>
-            <property name="right_attach">3</property>
-            <property name="top_attach">1</property>
-            <property name="bottom_attach">2</property>
-            <property name="x_options">GTK_SHRINK</property>
-            <property name="y_options">GTK_SHRINK</property>
+            <property name="left-attach">2</property>
+            <property name="right-attach">3</property>
+            <property name="top-attach">1</property>
+            <property name="bottom-attach">2</property>
+            <property name="x-options">GTK_SHRINK</property>
+            <property name="y-options">GTK_SHRINK</property>
           </packing>
         </child>
       </object>
