--- a/configs/sim/touchy/touchy_test_panel.glade
+++ b/configs/sim/touchy/touchy_test_panel.glade
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.40.0 -->
 <interface>
-  <!-- interface-requires gladevcp 0.0 -->
-  <requires lib="gtk+" version="2.18"/>
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.0"/>
+  <requires lib="gladevcp" version="0.0"/>
   <object class="GtkWindow" id="window1">
-    <property name="can_focus">False</property>
-    <property name="accept_focus">False</property>
+    <property name="can-focus">False</property>
+    <property name="accept-focus">False</property>
     <child>
       <object class="State_Sensitive_Table" id="state_sensitive_table1">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="is_homed">False</property>
+        <property name="can-focus">False</property>
+        <property name="is-homed">False</property>
         <child>
           <object class="GtkVBox" id="vbox1">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="HAL_HBar" id="spindle-speed">
-                <property name="height_request">50</property>
+                <property name="height-request">50</property>
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="bg_color">#bebebebebebe</property>
+                <property name="can-focus">False</property>
+                <property name="bg-color">#bebebebebebe</property>
                 <property name="max">1500</property>
                 <property name="min">-1500</property>
                 <property name="shiny">True</property>
-                <property name="target_color">#a0a02020f0f0</property>
-                <property name="target_width">5</property>
-                <property name="text_template">%d</property>
-                <property name="z0_border">0.75</property>
-                <property name="z0_color">#0000ffff0000</property>
-                <property name="z1_border">0.89999997615814209</property>
-                <property name="z1_color">#ffffffff0000</property>
-                <property name="z2_color">#ffff00000000</property>
+                <property name="target-color">#a0a02020f0f0</property>
+                <property name="target-width">5</property>
+                <property name="text-template">%d</property>
+                <property name="z0-border">0.75</property>
+                <property name="z0-color">#0000ffff0000</property>
+                <property name="z1-border">0.89999997615814209</property>
+                <property name="z1-color">#ffffffff0000</property>
+                <property name="z2-color">#ffff00000000</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -42,7 +42,7 @@
             <child>
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes">        This panel is 
 For SIM TESTING Only</property>
                 <attributes>
@@ -59,20 +59,20 @@ For SIM TESTING Only</property>
             <child>
               <object class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkHBox" id="hbox1">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                     <child>
                       <object class="Hal_Dial" id="mpg">
-                        <property name="height_request">250</property>
+                        <property name="height-request">250</property>
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="center_color">#bdefbdefbdef</property>
+                        <property name="can-focus">False</property>
+                        <property name="center-color">#bdefbdefbdef</property>
                         <property name="label">MPG</property>
-                        <property name="scale_adjustable">False</property>
-                        <property name="show_counts">False</property>
+                        <property name="scale-adjustable">False</property>
+                        <property name="show-counts">False</property>
                       </object>
                       <packing>
                         <property name="expand">True</property>
@@ -83,18 +83,18 @@ For SIM TESTING Only</property>
                     <child>
                       <object class="GtkAlignment" id="alignment1">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
+                        <property name="can-focus">False</property>
                         <property name="xscale">0.5</property>
                         <property name="yscale">0.5</property>
                         <child>
                           <object class="HAL_Button" id="cycle-start-button">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
+                            <property name="can-focus">True</property>
+                            <property name="receives-default">True</property>
                             <child>
                               <object class="GtkLabel" id="label2">
                                 <property name="visible">True</property>
-                                <property name="can_focus">False</property>
+                                <property name="can-focus">False</property>
                                 <property name="ypad">4</property>
                                 <property name="label" translatable="yes">Cycle
 Start</property>
