docs: Add back German translation link in stable branch index page.

--- a/docs/src/index.tmpl
+++ b/docs/src/index.tmpl
@@ -92,6 +92,14 @@ function setup_page(){
 <h2>Documentation</h2> -->
 <h2>LinuxCNC version <strong>@VERSION@</strong> Documentation</h2>
 
+@TRANSLATIONS@
+<p>Translations:
+<a href="de/">Deutsch</a>
+</p>
+@ENDTRANSLATIONS@
+<i>(more translations exist in the development branch, but may describe features not yet released)</i>
+<br><br><br>
+
 <div style="margin-top: 0em; margin-bottom: 1em; line-height: 150%">
 <p><a href="http://linuxcnc.org">LinuxCNC Home Page</a>  &bull;
 <a href="https://wiki.linuxcnc.org/cgi-bin/wiki.pl">Wiki</a> &bull;
