Documentation: build process: Add files for Tamil
Also removed Turkish, which is yet too incomplete and is not built.

--- a/docs/src/index.tmpl
+++ b/docs/src/index.tmpl
@@ -102,7 +102,7 @@ function setup_page(){
 <a href="nb/">Norsk bokm&aring;l</a>
 <a href="ru/">Russian</a>
 <a href="sv/">Svensk</a>
-<a href="tr/">Turkish</a>
+<!-- <a href="ta/">Tamil</a> -->
 <a href="zh_CN/">中文</a>
 </p>
 @ENDTRANSLATIONS@
